--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div><!-- /.container -->
 
   <footer class="container">
-    <p>&copy; 2012–2021 World Conference on Pharmacometrics &middot; <a href="#">Privacy</a></p>
+    <p>&copy; 2012–2021 World Conference on Pharmacometrics</p>
   </footer>
 </main>
 
