--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="canonical" href="https://go-wcop.org">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
-
   </head>
   <body>
 
@@ -36,9 +33,7 @@
 
   </div>
 
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
-  <div class="container marketing">
+  <div class="container">
 
     <div class="row featurette">
       <div class="col">
